Fix horizontal scrollbar issue and create button component for sign up form

--- a/style.css
+++ b/style.css
@@ -14,11 +14,13 @@ body {
   margin: 0;
   padding: 0;
   background-color: #1F2937;
+  min-width: 100%;
 }
 
 /* ===========
   typography
 ============= */
+
 ul {
   display: flex;
   list-style-type: none;
@@ -61,16 +63,21 @@ ul {
 
 .blockquote {
   background-color: #E5E7EB;
+  max-width: 100vw;
   font-size: 2rem;
   font-weight: 100;
   color: #1F2937;
-  padding: 2em;
-  max-width: 100vw;
+  padding: 4em 4em 4em 4em;
+}
+
+.signup-caption {
+  margin: auto 0;
 }
 
 /* ===========
   layout
 ============= */
+
 .content-container {
   display: flex;
   flex-flow: row wrap;
@@ -78,7 +85,6 @@ ul {
   justify-content: space-around;
   padding: 1em;
 }
-
 
 .nav-bar {
   align-self: flex-end;
@@ -92,6 +98,7 @@ ul {
   margin-top: 3em;
   gap: 1.5em;
   padding: 4em;
+  min-width: 100%;
 }
 
 .content-container-three, h2 {
@@ -100,25 +107,47 @@ ul {
   flex-wrap: wrap;
   align-items: center;
   background-color: #F9FAF8;
-  min-width: 100vw;
+  min-width: 100%;
   gap: 1.5em;
   margin: 0;
+  padding-bottom: .5em;
 }
 
 .content-container-four {
   display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  background-color: #F9FAF8;
+  min-width: 100%;
+  gap: 3em;
+}
+
+.email-signup {
+  display: flex;
   flex-flow: row wrap;
+  justify-content: space-between;
+  background-color: rgb(187, 176, 197);
+  width: 800px;
+  height: 160px;
+  border-radius: 0.5em 0.5em;
+  gap: 1.5em;
+  padding: 4em;
+}
+
+.email-wrapper {
+  display: flex;
   align-items: center;
   justify-content: center;
   background-color: #F9FAF8;
-  min-width: 100vw;
-
+  padding: 4em 4em 4em 4em;
+  max-width: 100%;
+  flex: 0;
 }
 
 .footer {
   text-align: center;
   background-color: #1F2937;
-  min-width: 100vw;
+  min-width: 100%;
   padding: 1em;
 }
 
@@ -126,22 +155,30 @@ ul {
   images
   ========== */
 
-  .bath-house-image {
-    max-width: 50%;
-    border-radius: .5em .5em;
-    align-self: flex-end;
-  }
+.bath-house-image {
+  max-width: 50%;
+  border-radius: .5em .5em;
+  align-self: flex-end;
+}
   
-  .product-image {
-    display: block;
-    min-width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
- 
+.product-image {
+  display: block;
+  min-width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
 /* ===========
   components
 ============= */
+ 
+.signup-caption>button {
+  display: block;
+  width: 100%;
+  padding: 0.5em 2em;
+}
 
- /* buttons !! */ 
+div.signup-button {
+  margin: auto 0;
+}
